apps/base/pgadmin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`pgadmin.ehomelab.local`)
      kind: Rule
      services:
        - name: pgadmin
          port: 3004
